# my-journal

./: Cargo.toml  README.md  cert.pem  key.pem
docs/: README.md  TECH.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs
frontend/styles/: main.css
frontend/templates/: home.html
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/routes/: home.rs  mod.rs
server/src/tests/: mod.rs
server/src/utils/: app_error.rs  clap.rs  mod.rs
